...
            "state" : "translated",
            "value" : "L’accès à l’appareil photo est désactivé"
          }
        }
      }
    },
    "Cancel" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Annuler"
          }
...
            "state" : "translated",
            "value" : "Personnalisé"
          }
        }
      }
    },
    "Daily no-hangs" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No-hangs quotidiens"
          }
...
            "state" : "translated",
            "value" : "Modifier les max pour %@"
          }
        }
      }
    },
    "Edit routine" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Modifier la routine"
          }
...
            "state" : "translated",
            "value" : "Hello,"
          }
        }
      }
    },
    "History" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Historique"
          }
...
            "state" : "translated",
            "value" : "lb"
          }
        }
      }
    },
    "Lead-in before each set" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Décompte avant chaque série"
          }
...
            "state" : "translated",
            "value" : "Charge par prise"
          }
        }
      }
    },
    "Log a session" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enregistrer une séance"
          }
...
            "state" : "translated",
            "value" : "aujourd'hui"
          }
        }
      }
    },
    "Today" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aujourd'hui"
          }
...
